Change to default DeepCopy FoxHttpRequestBuilder